--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi Primera Pagina Web</title>
+    <img src="header.png" alt="header">
 </head>
 <body>
-    
+
 </body>
 </html>
